--- a/giftlink-frontend/.env
+++ b/giftlink-frontend/.env
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URL=https://zyoni-3060.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+REACT_APP_BACKEND_URL=https://zyoni-3060.theiaopenshiftnext-1-labs-prod-theiaopenshift-4-tor01.proxy.cognitiveclass.ai/
