Configure and Containerize the REACT Server

--- a/giftlink-backend/.env
+++ b/giftlink-backend/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://root:EFByBTAMf0I4deIcd6T7bIwF@172.21.194.209:27017
-JWT_SECRET=setasecret
+MONGO_URL=mongodb://mongodb-service:27017
+JWT_SECRET=mysecret
