Hands-on Lab: Create the MainPage and Navbar

--- a/giftlink-backend/.env
+++ b/giftlink-backend/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://mongodb-service:27017
+MONGO_URL=mongodb://root:21bL2gi8VnUH1cRReRxx7m4A@172.21.125.57:27017
 JWT_SECRET=mysecret
